crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_invalid_python.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(\"def {invalid\", \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
