crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_keyword_position_check.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaulttags\"))"
---
tag_rules:
  "django.template.defaulttags::cycle":
    arg_constraints:
      - Min: 2
    required_keywords:
      - position: 2
        value: as
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
filter_arities: {}
block_specs: {}
