crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_len_exact_check.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaulttags\"))"
---
tag_rules:
  "django.template.defaulttags::widthratio":
    arg_constraints:
      - Exact: 4
    required_keywords: []
    known_options: ~
filter_arities: {}
block_specs: {}
