crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_len_max_check.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaulttags\"))"
---
tag_rules:
  "django.template.defaulttags::debug":
    arg_constraints:
      - Max: 1
    required_keywords: []
    known_options: ~
    extracted_args: []
filter_arities: {}
block_specs: {}
