crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_len_not_in_check.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaulttags\"))"
---
tag_rules:
  "django.template.defaulttags::firstof":
    arg_constraints:
      - OneOf:
          - 2
          - 3
          - 4
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
      - name: arg3
        required: true
        kind: Variable
        position: 2
filter_arities: {}
block_specs: {}
