crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_mixed_library.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.helpers\"))"
---
tag_rules:
  "app.templatetags.helpers::csrf_token":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "app.templatetags.helpers::with":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities:
  "app.templatetags.helpers::add":
    expects_arg: true
    arg_optional: false
  "app.templatetags.helpers::default_if_none":
    expects_arg: true
    arg_optional: true
  "app.templatetags.helpers::length":
    expects_arg: false
    arg_optional: false
block_specs:
  "app.templatetags.helpers::with":
    end_tag: endwith
    intermediates: []
    opaque: false
