crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_multiple_raise_statements.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaulttags\"))"
---
tag_rules:
  "django.template.defaulttags::url":
    arg_constraints:
      - Min: 2
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
      - name: arg3
        required: true
        kind: Variable
        position: 2
    supports_as_var: false
filter_arities: {}
block_specs: {}
