crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_multiple_registrations.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.mixed\"))"
---
tag_rules:
  "app.templatetags.mixed::my_tag":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
  "app.templatetags.mixed::simple_hello":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: name
        required: true
        kind: Variable
        position: 0
      - name: as
        required: false
        kind:
          Literal: as
        position: 1
      - name: varname
        required: false
        kind: Variable
        position: 2
filter_arities:
  "app.templatetags.mixed::my_filter":
    expects_arg: true
    arg_optional: false
  "app.templatetags.mixed::no_arg_filter":
    expects_arg: false
    arg_optional: false
block_specs: {}
