crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_no_registrations.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
