crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_no_split_contents.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaulttags\"))"
---
tag_rules: {}
filter_arities: {}
block_specs:
  "django.template.defaulttags::comment":
    end_tag: endcomment
    intermediates: []
    opaque: true
